feat: integrate React frontend into monorepo structure